File Load Bug Fix
Fixed a bug for TX file loading.